[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://main_game.gd" id="1"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Environment" type="Node2D" parent="."]

[node name="RoomBackground" type="Sprite2D" parent="Environment"]
position = Vector2(400, 300)

[node name="CatManager" type="Node2D" parent="."]

[node name="CatContainer" type="Node2D" parent="CatManager"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="UI/GameHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -20.0

[node name="CurrencyLabel" type="Label" parent="UI/GameHUD/VBox"]
layout_mode = 2
text = "Tunca Cans: 0"

[node name="SpawnProgress" type="ProgressBar" parent="UI/GameHUD/VBox"]
layout_mode = 2
max_value = 100.0

[node name="SpawnTimerLabel" type="Label" parent="UI/GameHUD/VBox"]
layout_mode = 2
text = "Next Cat: 30.0s"

[node name="InfoLabel" type="Label" parent="UI/GameHUD/VBox"]
layout_mode = 2
text = ""
modulate = Color(1, 1, 0, 1)

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="SaveTimer" to="." method="_on_save_timer_timeout"]